# tabvis

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
docs/: AGENT_GATEWAY_DESIGN.md  Browser_opereation_simulation.md  CREDENTIAL_INJECTION_DESIGN.md  DATA_MODEL.md  FEATURES.md  RESUME_PLUS_DESIGN.md  RUNNING.md
tabvis/: __init__.py  __main__.py  bootstrap_entry.py  bootstrap_macro.py  tool.py
tabvis/agent/: __init__.py  context.py  main.py  project_instructions.py  query_engine.py  resume_plus.py  run_context.py  run_envelope.py  setup.py  task.py
tabvis/authentication/: __init__.py  approval.py  audit.py  broker_client.py  capabilities.py  errors.py  models.py  policy.py  policy_engine.py  profile_store.py  secrets.py  totp.py
tabvis/bootstrap/: __init__.py  state.py
tabvis/browser/: __init__.py  artifacts.py  auth_browser.py  auth_lease.py  browser_service.py  data_clearing.py  dev_server.py  downloads.py  drivers.py  event_bus.py  events.py  host.py  identity.py  identity_store.py  lifecycle.py  manager.py  observation.py  observation_adapters.py  policy_guard.py  profile_generation.py  rate_limiter.py  secret_store.py  server.py  server_auth.py  session.py  session_registry.py  workspace.py
tabvis/channels/: __init__.py
tabvis/constants/: api_limits.py  common.py  cyber_risk_instruction.py  figures.py  messages.py  prompts.py  query_source.py  system.py  system_prompt_sections.py  tool_limits.py  tools.py  xml.py
tabvis/credential_broker/: __init__.py  broker.py  executor.py  hardening.py  protocol.py  server.py
tabvis/dlp/: __init__.py  canary.py  gateway.py  image.py  text.py  url.py
tabvis/gateway/: __init__.py  lifecycle.py
tabvis/policy/: __init__.py  actions.py  audit.py  bash_adapter.py  engine.py  filesystem_adapter.py  fs_resource.py  grants.py  modes.py  resources.py  rules.py  runtime_adapter.py  settings_source.py
tabvis/services/: diagnostic_tracking.py  internal_logging.py  token_estimation.py
tabvis/session_vault/: __init__.py  crypto.py  models.py  store.py
tabvis/state/: app_state_store.py  store.py
tabvis/types/: can_use_tool.py  command.py  ids.py  logs.py  message.py  message_queue_types.py  permissions.py  text_input_types.py  tools.py
tabvis/ui/: __init__.py
tabvis/utils/: abort.py  abort_controller.py  agent_context.py  agent_swarms_enabled.py  analyze_context.py  api.py  array.py  attachments.py  auth_file_descriptor.py  browser_config.py  bundled_mode.py  cleanup_registry.py  concurrent_sessions.py  config.py  config_constants.py  context.py  context_analysis.py  crypto.py  cwd.py  debug.py  diag_logs.py  diff.py  dotenv_loader.py  env.py  env_dynamic.py  env_utils.py  errors.py  exec_file_no_throw.py  exec_file_no_throw_portable.py  exec_sync_wrapper.py  file.py  file_read.py  file_state_cache.py  find_executable.py  fingerprint.py  forked_agent.py  format.py  frontmatter_parser.py  fs_operations.py  generators.py  (+78 more)
tests/: conftest.py  test_memdir.py  test_project_instructions.py
tests/agent/: test_agent_memory_store.py  test_cli_resume_args.py  test_memory_admin_retention.py  test_memory_consolidation.py  test_memory_integration.py  test_memory_provider.py  test_memory_sanitizer.py  test_resume_plus.py
tests/authentication/: test_adapter_registry.py  test_approval_and_policy_engine.py  test_audit_and_errors.py  test_canary.py  test_capabilities.py  test_dlp_gateway.py  test_dlp_image_and_providers.py  test_generic_password_adapter.py  test_models_and_schema.py  test_policy_origin.py  test_profile_store.py  test_secret_backend_production.py  test_secret_value.py  test_totp.py
tests/credential_broker/: conftest.py  test_broker_end_to_end.py  test_ipc_server.py  test_providers_and_hardening.py
tests/gateway/: conftest.py  test_agent_launcher.py  (+45 more)
web/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
(+392 files in other folders)
