[project]
name = "tabvis"
description = "Tabvis — headless coding agent CLI with Playwright browser automation."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dynamic = ["version"]
dependencies = [
    "anthropic>=0.40",
    "httpx>=0.27",
    "httpcore>=1.0",
    "markdown-it-py>=3.0",
    "mcp>=1.0",
    "pathspec>=0.12",
    "playwright>=1.48",
    "pydantic>=2.5",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    "sse-starlette>=2.1",
    "starlette>=0.37",
    "uvicorn>=0.30",
    "wcwidth>=0.2",
]

[project.optional-dependencies]
# The stealth browser engine (TABVIS_BROWSER_ENGINE=cloak): `uv sync --extra cloak`.
# Optional because it pulls its own patched Chromium (~140MB, downloaded on first launch) that most
# runs never need — tabvis drives stock Playwright Chromium without it.
cloak = ["cloakbrowser>=0.4.10"]
# The Firefox-kernel stealth engine (TABVIS_BROWSER_ENGINE=camoufox): `uv sync --extra camoufox`.
# Same rationale as cloak — it downloads its own patched Firefox on first launch.
camoufox = ["camoufox>=0.4"]
# Non-Anthropic model providers (TABVIS_MODEL_PROVIDER=openai|gemini). Optional because the default
# provider is Anthropic and most runs never need these SDKs. The provider raises a clear install
# hint if its package is missing rather than silently downgrading.
openai = ["openai>=1.40"]
gemini = ["google-genai>=0.3"]
# OCR fallback for NON-multimodal models (a text-only LLM can't see an image, so image blocks are
# OCR'd to text before the request — see tabvis/utils/ocr.py). Optional because vision-capable models
# don't need it, and the layered engine also runs with just a `tesseract` binary on PATH; the Python
# binding is only the fast in-process path. Needs the tesseract engine installed per OS (macOS `brew
# install tesseract`, Debian/Ubuntu `apt install tesseract-ocr`, Windows `choco install tesseract`).
# `tesserocr` builds against libtesseract/leptonica; on Windows `pip install pytesseract pillow` +
# the binary is the easier route (the OCR layer auto-detects whichever is present).
ocr = ["tesserocr>=2.6"]
# IM channel plugins that need `cryptography` for inbound verification. Optional because most channels
# (DingTalk, Slack, LINE, WhatsApp) verify with standard-library HMAC/SHA and need nothing extra; only
# these use public-key or AES crypto and raise a clear install hint if their credential is configured
# without the package installed:
#   feishu       — AES-256-CBC decryption of the encrypted event envelope (Encrypt Key)
#   wecom        — WXBizMsgCrypt AES-256-CBC callback decryption (企业微信)
#   teams        — RS256 JWT (Bot Framework) validation of the inbound bearer token
#   google_chat  — RS256 OIDC id-token verification + Service Account assertion signing
feishu = ["cryptography>=41"]
wecom = ["cryptography>=41"]
teams = ["cryptography>=41"]
google_chat = ["cryptography>=41"]
# Client-loop IM channels whose live connection is a WebSocket (httpx has no WS client). Optional
# because their inbound event parsing + outbound send are tested without a live socket; the socket is
# only needed to actually connect, and the plugin raises a clear install hint if it is missing:
#   discord      — the Discord Gateway websocket
#   mattermost   — the Mattermost websocket event feed
#   simplex      — the local SimpleX Chat CLI websocket
discord = ["websockets>=12"]
mattermost = ["websockets>=12"]
simplex = ["websockets>=12"]

[project.scripts]
tabvis = "tabvis.bootstrap_entry:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "tabvis/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["tabvis"]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
